public class Main{
    public static void main(String[] args) {
        @SuppressWarnings("unused")
        GUI app = new GUI();
    }
}